fixing movecard bugs. switched getlast to get(size - 1) because apparently getlast doesn't exist?