@@ -49,7 +49,7 @@ public class GameBoard extends JPanel {
             if (stackToAdd.isEmpty()) {
                 suitTop = new CardComponent(null, -3, -3, this);
             } else {
-                suitTop = new CardComponent(stackToAdd.getLast(), -3, -3, this);
+                suitTop = new CardComponent(stackToAdd.get(stackToAdd.size() - 1), -3, -3, this);
             }
             suitTop.setBounds(x, y, 70, 100);
             this.add(suitTop);
@@ -58,14 +58,14 @@ public class GameBoard extends JPanel {
         //drawPile
         CardComponent deckTop;
         if (!gameDeck.deck.isEmpty()) {
-            deckTop = new CardComponent(gameDeck.deck.getLast(), -1, -1, this);
+            deckTop = new CardComponent(gameDeck.deck.get(gameDeck.deck.size() - 1), -1, -1, this);
         } else {
             deckTop = new CardComponent(null, -1, -1, this);
         }
         deckTop.setBounds(25, 100, 70, 100);
         this.add(deckTop);
         if (!drawPile.isEmpty()) {
-            CardComponent drawTop = new CardComponent(drawPile.getLast(), -2, -2, this);
+            CardComponent drawTop = new CardComponent(drawPile.peek(), -2, -2, this);
             drawTop.setBounds(25, 225, 70, 100);
             this.add(drawTop);
         }
